Added code for visitor registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.data.rest.base-path=/api
 server.port=15001
 app.location=Mesa, Arizona
 
-path.route[0].uiEndpoint=getVisitorLookup
-path.route[0].dtoClass=com.cognizant.badgeorama.model.dto.VisitorLookupSparseDto
-path.route[0].restEndpoint=visitorLookup
+rest.client.protocol=http
+rest.client.host=localhost
+rest.client.port=15002
+
+
