--- a/src/main/resources/route.properties
+++ b/src/main/resources/route.properties
@@ -1,10 +1,14 @@
 # Endpoint routes
 
-config.routes[0].uiEndpoint=getVisitorLookup
+config.routes[0].uiEndpointMethodName=getVisitorLookup
 config.routes[0].dtoClass=com.cognizant.badgeorama.model.dto.VisitorLookupSparseDto
-config.routes[0].restEndpoint=visitorLookup
+config.routes[0].restEndpointMethodName=visitorLookup
+config.routes[0].restEndpoint=/visitor/lookup
 
-
+config.routes[1].uiEndpointMethodName=registerVisitor
+config.routes[1].dtoClass=com.cognizant.badgeorama.model.dto.VisitorRegistrationDto
+config.routes[1].restEndpointMethodName=registerVisitor
+config.routes[1].restEndpoint=/visitor/register
 
 
 
