Pipeline updated to use annotations

--- a/src/main/resources/route.properties
+++ b/src/main/resources/route.properties
@@ -1,14 +1,11 @@
-# Endpoint routes
+# REST endpoints
+#
+# route.endpoint key is based on method name in REST client -
+# consequently, all method names between all REST clients must be unique.
 
-config.routes[0].uiEndpointMethodName=getVisitorLookup
-config.routes[0].dtoClass=com.cognizant.badgeorama.model.dto.VisitorLookupSparseDto
-config.routes[0].restEndpointMethodName=visitorLookup
-config.routes[0].restEndpoint=/visitor/lookup
+# Visitor Endpoints
+route.endpoint.visitorLookup=/visitor/lookup
+route.endpoint.registerVisitor=/visitor/register
 
-config.routes[1].uiEndpointMethodName=registerVisitor
-config.routes[1].dtoClass=com.cognizant.badgeorama.model.dto.VisitorRegistrationDto
-config.routes[1].restEndpointMethodName=registerVisitor
-config.routes[1].restEndpoint=/visitor/register
-
-
+# Monitor Endpoints
 
