Visitor Pages working

--- a/src/main/resources/route.properties
+++ b/src/main/resources/route.properties
@@ -2,10 +2,9 @@
 #
 # route.endpoint key is based on method name in REST client -
 # consequently, all method names between all REST clients must be unique.
-
 # Visitor Endpoints
 route.endpoint.visitorLookup=/visitor/lookup
 route.endpoint.registerVisitor=/visitor/register
-
+route.endpoint.checkoutVisitor=/visitor/checkout
 # Monitor Endpoints
 
