Updates to rest clients

--- a/src/main/resources/route.properties
+++ b/src/main/resources/route.properties
@@ -10,4 +10,9 @@ route.endpoint.checkoutVisitor=/visitor/checkout
 
 # Monitor Endpoints
 route.endpoint.visitorAdmin=/visitor/update
+route.endpoint.getWaitingVisitors=/visitors/waiting
+route.endpoint.getCheckedInVisitors=/visitors/checkedin
+route.endpoint.getCheckedOutVisitors=/visitors/checkedout
+
+
 
