--- a/app.json
+++ b/app.json
@@ -4,49 +4,18 @@
   },
   "env": {
 
-    "app.location": {
-      "description": "",
-      "value": "Mesa, Arizona"
-    },
-    "rest.client.protocol": {
-      "description": "",
-      "value": "http"
-    },
-    "rest.client.host": {
-      "description": "",
-      "value": "localhost"
-    },
-    "rest.client.port": {
-      "description": "",
-      "value": "80"
-    },
-    "route.endpoint.visitorLookup": {
-      "description": "",
-      "value": "/visitor/lookup"
-    },
-    "route.endpoint.registerVisitor": {
-      "description": "",
-      "value": "/visitor/register"
-    },
-    "route.endpoint.checkoutVisitor": {
-      "description": "",
-      "value": "/visitor/checkout"
-    },
-    "route.endpoint.visitorAdmin": {
-      "description": "",
-      "value": "/visitor/update"
-    },
-    "route.endpoint.getWaitingVisitors": {
-      "description": "",
-      "value": "/visitors/waiting"
-    },
-    "route.endpoint.getCheckedInVisitors": {
-      "description": "",
-      "value": "/visitors/checkedin"
-    },
-    "route.endpoint.getCheckedOutVisitors": {
-      "description": "",
-      "value": "/visitors/checkedout"
+    "app.location":"Mesa, Arizona",
+    "rest.client.protocol":"http",
+    "rest.client.host":"localhost",
+    "rest.client.port":"80",
+    "route.endpoint.visitorLookup":"/visitor/lookup",
+    "route.endpoint.registerVisitor":"/visitor/register",
+    "route.endpoint.checkoutVisitor":"/visitor/checkout",
+    "route.endpoint.visitorAdmin":"/visitor/update",
+    "route.endpoint.getWaitingVisitors":"/visitors/waiting",
+    "route.endpoint.getCheckedInVisitors":"/visitors/checkedin",
+    "route.endpoint.getCheckedOutVisitors":"/visitors/checkedout",
+
     }
 
   },
