--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 server.port=15001
-app.location=Mesa, Arizona
-rest.client.protocol=http
-rest.client.host=localhost
-rest.client.port=15002
+
+process.env.LOCATION=Mesa, Arizona
+process.env.PROTOCOL=http
+process.env.HOST=localhost
+process.env.PORT=15002
+
+process.env.ROUTE_VISITORADMIN=/visitor/update
+process.env.ROUTE_GETWAITINGVISITORS=/visitors/waiting
+process.env.ROUTE_GETCHECKEDINVISITORS=/visitors/checkedin
+process.env.ROUTE_GETCHECKEDOUTVISITORS=/visitors/checkedout
+
+process.env.ROUTE_VISITORLOOKUP=/visitor/lookup
+process.env.ROUTE_REGISTERVISITOR=/visitor/register
+process.env.ROUTE_CHECKOUTVISITOR=/visitor/checkout
 
 
