--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=15001
 
 process.env.LOCATION=Mesa, Arizona
-process.env.PROTOCOL=http
-process.env.HOST=localhost
-process.env.PORT=15002
+process.env.PROTOCOL=https
+process.env.HOST=pascal-zuul-stage.herokuapp.com
+process.env.PORT=443
 
 process.env.ROUTE_visitorAdmin=/visitor/update
 process.env.ROUTE_getWaitingVisitors=/visitors/waiting
@@ -13,5 +13,3 @@ process.env.ROUTE_getCheckedOutVisitors=/visitors/checkedout
 process.env.ROUTE_visitorLookup=/visitor/lookup
 process.env.ROUTE_registerVisitor=/visitor/register
 process.env.ROUTE_checkoutVisitor=/visitor/checkout
-
-
