--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=15001
+server.port=${PORT:15001}
 
 process.env.LOCATION=Mesa, Arizona
-process.env.PROTOCOL=https
-process.env.HOST=pascal-zuul-stage.herokuapp.com
+process.env.PROTOCOL=http
+process.env.HOST=localhost
 process.env.PORT=443
 
 process.env.ROUTE_visitorAdmin=/visitor/update
