--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=${PORT:15001}
 
 process.env.LOCATION=Mesa, Arizona
-process.env.PROTOCOL=http
-process.env.HOST=localhost
-process.env.PORT=443
+process.env.PROTOCOL=${PROTOCOL:http}
+process.env.HOST=${HOST:localhost}
+process.env.PORT=${PORT:443}
 
 process.env.ROUTE_visitorAdmin=/visitor/update
 process.env.ROUTE_getWaitingVisitors=/visitors/waiting
