Updates to edit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,6 @@ process.env.ROUTE_getCheckedInVisitors=/visitors/checkedin
 process.env.ROUTE_getCheckedOutVisitors=/visitors/checkedout
 
 process.env.ROUTE_visitorLookup=/visitor/lookup
+process.env.ROUTE_visitLookup=/visit/lookup
 process.env.ROUTE_registerVisitor=/visitor/register
 process.env.ROUTE_checkoutVisitor=/visitor/checkout
